<resources>
    <string name="app_name">NeworkEG</string>
    <string name="label">Label</string>
    <string name="cancel">Cancel</string>
    <string name="node_settings">Object settings</string>
    <string name="close">Close</string>
    <string name="set_color">Set Color</string>
    <string name="lis_of_arc">List of connexion</string>
    <string name="conn_setting">Connexion Settings</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="change_color">Object color</string>
    <string name="choose_default_color">Set object default color</string>
    <string name="connexion">Connexion</string>
    <string name="color">Color</string>
    <string name="node_name_label"> Object name : </string>
    <string name="change_name"> Change it\'s name : </string>
    <string name="node_name"> Object name </string>
    <string name="reading_mode"> Reading mode </string>
    <string name="editting_mode"> Editting mode </string>
    <string name="resetting_mode"> Reset all </string>
    <string name="further_mode"> further mode </string>
    <string name="item_help">Help </string>
    <string name="setting"> Setting </string>

    <string name="reading_mode_info"> You are on reading mode  !</string>
    <string name="editting_mode_info"> You are on editting mode ! </string>
    <string name="resetting_mode_info"> You have reset all ! </string>
    <string name="further_mode_info"> further modes are not defined yet ! </string>
    <string name="objetNonDeplacableEnModeCreation"> Object can be moved only if you are on READING MODE ! </string>
    <string name="passOnCreationMode"> Activate EDITTING MODE for creation or editting ! </string>

    <string name="firstNode"> Object 1 : </string>
    <string name="secondNode"> Object 2 : </string>
    <string name="remove"> Remove </string>
    <string name="connDefautColor">Set default color </string>
    <string name="save_network">save network</string>
    <string name="save_network_message">network is saved, you can import it later.</string>
    <string name="import_network">import network</string>
    <string name="screemshot">Share screemshot </string>
    <string name="creationLabel">Type the new network\'s name </string>
    <string name="network_name">network name </string>
    <string name="create">create </string>
    <string name="new_object_name">New object\'s name </string>
    <string name="creationNodeLabel">New object creation </string>
    <string name="import_plan_message">Import a plan </string>
    <string name="network_saved_message"> NETWORK SAVED IN : </string>
    <string name="send_to"> Send to </string>

    <string name="help_pup_title">Help </string>


    <string name="HelpText"> \n\n\
        This application aims to connect objects of an apartment. Its menu is composed of somes options:\n\n
        \t\t READING MODE \n
        In read mode you can only move objects for the readability of the network of connected objects.
        Place your finger on an object and move the finger to move the object.
        If you want to create objects or connections then you have to switch to creation mode. \n\n

        \t\t CREATION MODE \n
        In creation mode you can create or modify objects and their connections.
        When you are in creation mode, A long touch of the plan of the apartment allows you to create an object.
        Place your finger on an object and move the finger to draw a connection.
        In design mode you cannot move objects, so you must switch to reading mode to do so.
        A click on an object allows to open the parameters of this object and to modify it, click on the middle of a connection to do the same. \n\n

        \n\n IMPORT A PLAN option allows you to import your own apartment plan.
        \n\n
        The other menu options are self-explanatory.</string>

</resources>
