<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item android:id="@+id/item_read" android:title="@string/reading_mode"></item>
    <item android:id="@+id/item_edit" android:title="@string/editting_mode"></item>
    <item android:id="@+id/item_reset" android:title="@string/resetting_mode"></item>
    <item android:id="@+id/item_save" android:title="@string/save_network"></item>
    <item android:id="@+id/item_import" android:title="@string/import_network"></item>
    <item android:id="@+id/item_import_plan" android:title="@string/import_plan_message"></item>
    <item android:id="@+id/item_screemshot" android:title="@string/screemshot"></item>
    <item android:id="@+id/item_help" android:title="@string/item_help"> </item>

</menu>