<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="309dp"
            android:layout_height="41dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/node_settings"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="right">
        <Button
            android:id="@+id/defaultcolorbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/choose_default_color"
             />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/node_name_label"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/nodelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/node_name"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_margin="8dp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22dp"
            android:text="@string/change_name"
            android:textAlignment="center"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/node_label_input"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="25dp"
            android:textColorLink="@color/colorPrimary"/>

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity=""
        android:layout_margin="20dp">


        <Button
            android:id="@+id/choosecolorbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_color"/>

        <Button
            android:id="@+id/deletebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:layout_marginLeft="100dp"/>

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="15dp">


        <Button
            android:id="@+id/dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:layout_marginRight="5dp"
            android:paddingHorizontal="60dp"/>


        <Button
            android:id="@+id/savebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/save"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_marginLeft="5dp"
            android:paddingHorizontal="60dp"/>

    </LinearLayout>









</LinearLayout>